tests/error/array_errors/non_array_copy.err
Error: Type mismatch (at $FILE:9:12)
  | 
7 | @guppy(module)
8 | def main() -> None:
9 |    y = copy("not an array")
  |             ^^^^^^^^^^^^^^ Expected argument of type `array[?T, ?n]`, got `str`

Guppy compilation failed due to 1 previous error
